# discord-project

./: AGENTS.md
.mimocode/plans/: 1784827106623-glowing-garden.md  1784833103738-kind-orchid.md  1784861398750-jolly-garden.md  1784869363927-curious-canyon.md  1784869363928-curious-conyon.md
.mimocode/skills/spec-to-implementation/: api_implementation.md  configured_channels.md  eliminate_duplicate_discord_logic.md  enhance_issue_capture.md  swagger_documentation.md  (+1 more)
discord-frontend/: .prettierignore  AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
discord-frontend/src/: App.tsx  index.css  main.tsx
mcp-discord/: AGENTS.md  README.md  mcp_client.py  pyproject.toml  requirements.txt  seed.py
mcp-discord/.codex/prompts/: api_implementation.md  capture_discord_issues.md
mcp-discord/.mimocode/skills/spec-to-implementation/: Discord_Message_Deletion_Synchronization_Specification.md  backfill_issues.md  reply_discord_message_tool.md
mcp-discord/src/discord_mcp/: __init__.py  config.py  issue_capture.py  issue_parser.py  issues_repository.py  server.py
mcp-discord/src/discord_mcp/api/: __init__.py  deps.py  discord_gateway.py  mcp_models.py  models.py  repository.py  routes.py  schemas.py  service.py
mcp-discord/src/discord_mcp/core/: jwt.py  security.py
mcp-discord/tests/: test_api_repository.py  test_api_routes.py  test_api_service.py  test_auth_routes.py  test_auth_service.py  test_config.py  test_issue_capture.py  test_issue_parser.py  test_issues_repository.py  test_security.py  test_seed.py  test_server.py
(+8 files in other folders)
