[project]
name = "mcp-discord"
version = "0.1.0"
description = "Discord integration for Model Context Protocol"
authors = [
    {name = "Hanweg Altimer", email = "hanwegaltimer@outlook.com"},
]
dependencies = [
    "discord.py>=2.3.0",
    "fastapi>=0.115.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "mcp>=0.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlmodel>=0.0.22",
    "streamlit>=1.59.1",
    "uvicorn[standard]>=0.32.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/hanweg/mcp-discord"
Repository = "https://github.com/hanweg/mcp-discord.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discord_mcp"]

[project.scripts]
mcp-discord = "discord_mcp:main"
